# gollnlp

./: .gitignore  CMakeLists.txt  ContingencyProblemKronRedWithFixing.hpp  LICENSE  MyCpp1.cpp  MyCpp1Kron.cpp  MyCpp2.cpp  MyExe1.cpp  README.md  submission.conf  test_instanceslist.txt
src/Abstract/: OptProblem.cpp  OptProblem.hpp
src/Drivers/: CMakeLists.txt  CMakeLists.txt~  Ex1driver.cpp  SCACOPFData_test.cpp  SCACOPFData_test.cpp~
src/Ex1OptProblem/: CMakeLists.txt  Ex1OptObjects.hpp  Ex1driver.cpp
src/GeneralOptProblem/: CMakeLists.txt  OptObjTerms.cpp  OptObjTerms.hpp  OptProblem.cpp  OptProblem.hpp  OptProblemMDS.cpp  OptProblemMDS.hpp
src/LinAlg/: CMakeLists.txt  MatrixSparseTripletStorage.cpp  MatrixSparseTripletStorage.hpp
src/NlpSolver/: HiopSolver.hpp  HiopSolverSparse.hpp  IpoptSolver.hpp  KnitroSolver.hpp  NlpSolver.hpp
src/OPF/: .#goSCACOPFData.hpp  CMakeLists.txt  CMakeLists.txt~  goSCACOPFData.cpp  goSCACOPFData.cpp~  goSCACOPFData.hpp  goSCACOPFData.hpp~
src/SCACOPFProblem/: ACOPFDriver.cpp  ACOPFKronRedDriver.cpp  ACOPFKronRedProblem.cpp  ACOPFKronRedProblem.hpp  ACOPFProblem.cpp  ACOPFProblem.hpp  ACOPFProblemKronRed.cpp  ACOPFProblemKronRed.hpp  CMakeLists.txt  ContingencyProblem.cpp  ContingencyProblem.hpp  ContingencyProblemKronRed.cpp  ContingencyProblemKronRed.hpp  ContingencyProblemKronRedWithFixing.cpp  ContingencyProblemKronRedWithFixingCode1.cpp  ContingencyProblemKronRedWithFixingCode1.hpp  ContingencyProblemWithFixing.cpp  ContingencyProblemWithFixing.hpp  ContingencyProblemWithFixingCode1.cpp  ContingencyProblemWithFixingCode1.hpp  CouplingConstraints.cpp  CouplingConstraints.hpp  OPFConstraints.cpp  OPFConstraints.hpp  OPFConstraintsKron.cpp  OPFConstraintsKron.hpp  OPFObjectiveTerms.cpp  OPFObjectiveTerms.hpp  SCACOPFData.cpp  SCACOPFData.hpp  SCACOPFData_test.cpp  SCACOPFIO.cpp  SCACOPFIO.hpp  SCACOPFProblem.cpp  SCACOPFProblem.hpp  SCACOPFUtils.hpp  SCMasterProblem.cpp  SCMasterProblem.hpp  SCRecourseProblem.cpp  SCRecourseProblem.hpp  (+7 more)
src/Utils/: CMakeLists.txt  blasdefs.hpp  goLogger.cpp  goLogger.cpp~  goLogger.hpp  goOptions.cpp  goOptions.hpp  goRunStats.hpp  goSignalHandling.cpp  goSignalHandling.hpp  goTimer.hpp  goUtils.hpp
testing/: USAGE.md  build_summary.R  generate_tests.R  trial3_instances.csv
